# electro_sim

./: .gitignore  CHANGELOG.md  README.md  capture_ui.py  pyproject.toml  requirements.txt  run.py
docs/: architecture.md  development.md  physics_engine.md  user_manual.md
src/electro_sim/: __main__.py  app.py
src/electro_sim/physics_engine/: __init__.py  constants.py  dispersion.py  ellipsometry.py  fresnel.py  structures.py  sweeps.py  tmm.py  types.py  wavevector.py
src/electro_sim/resources/docs/: fundamentals.md
src/electro_sim/resources/themes/: dark.qss  light.qss
src/electro_sim/services/: cache.py  export_service.py  simulation_service.py
src/electro_sim/ui/: main_window.py  theme.py
src/electro_sim/ui/panels/: layers_panel.py  materials_panel.py  source_panel.py
src/electro_sim/ui/plots/: angular_plot.py  base_plot.py
src/electro_sim/ui/tabs/: angular_tab.py
src/electro_sim/ui/widgets/: collapsible_card.py  complex_input.py  fps_counter.py  slider_spin.py
src/electro_sim/viewmodels/: simulation_vm.py
tests/: conftest.py  test_cross_regression.py  test_physics.py  test_ui_smoke.py  test_vectorization_regression.py  test_wavevector.py
