[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electro_sim"
version = "0.1.0"
description = "Simulador interactivo de óptica ondulatoria (Fresnel, TMM, elipsometría) con interfaz PyQt6"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Ernesto Santiesteban", email = "ernestosantiesteban5@gmail.com" }
]
keywords = ["optics", "fresnel", "tmm", "ellipsometry", "pyqt6", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PyQt6>=6.6",
    "pyqtgraph>=0.13.3",
    "PyOpenGL>=3.1.7",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "qtawesome>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1",
    "hatch>=1.9",
    "ruff>=0.3",
]

[project.scripts]
electro-sim = "electro_sim.__main__:main"

[project.urls]
Homepage = "https://github.com/ernestosantiesteban/electro_sim"
Repository = "https://github.com/ernestosantiesteban/electro_sim"

[tool.hatch.build.targets.wheel]
packages = ["src/electro_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src/electro_sim"]
omit = ["src/electro_sim/resources/*", "src/electro_sim/__main__.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "NPY"]
ignore = ["E501"]
